--- a/index_js.html
+++ b/index_js.html
@@ -253,5 +253,12 @@
         <a href="http://www.rideuta.com/"><img class="logo" src="/images/logo_uta.svg" alt="" /><span class="screen-reader-text">Visit Utah Transit Authority website - Opens in a new window.</span></a>
       </div>
     </footer>
+    <script src="/include/js/main.js"></script>
+    <script src="/include/js/smooth-scroll.polyfills.min.js"></script>
+		<script defer>
+			var scroll = new SmoothScroll('a[href*="#"]', {
+				header: '[data-scroll-header]',
+      });
+		</script>
 	</body>
 </html>
